# ml-aws-docker-app

./: .dockerignore  .gitignore  Dockerfile  Employee_Attrition_Analysis.ipynb  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
src/api/: main.py
src/app/: streamlit_app.py
src/pipeline/: attr_pred_pipeline.py  train_pipeline.py
tests/: sample.py  test_model_loading.py  test_prediction.py
